# either-list-functions

./: .gitignore  README.md  cabal.project  default.nix  flake.nix  generate-docs.hs  readme.md  stack.yaml
.github/workflows/: haskell.yml
configurations/: ghc-8.10.project  ghc-8.6.project  ghc-8.8.project  ghc-9.0.project  ghc-9.2.project
docs/: doc-index.html  index.html
docs/src/: Data.List.EitherFunctions.html
either-list-functions/: changelog.md  changelog.txt  either-list-functions.cabal  license.txt  package.yaml
either-list-functions/src/Data/List/: EitherFunctions.hs
