cabal-version: 3.0

name:     either-list-functions
version:  0.0.4.5
category: Data
synopsis: Functions involving lists of Either

description: Functions involving lists of Either.

homepage:    https://github.com/typeclasses/either-list-functions
bug-reports: https://github.com/typeclasses/either-list-functions/issues

author:     Chris Martin <ch.martin@gmail.com>
maintainer: Chris Martin, Julie Moronuki

license: Apache-2.0
license-file: license.txt

build-type: Simple

extra-source-files:
  changelog.txt

source-repository head
  type: git
  location: https://github.com/typeclasses/either-list-functions

library
  default-language: Haskell2010
  hs-source-dirs: src
  ghc-options: -Wall
  exposed-modules: Data.List.EitherFunctions
  build-depends: base ^>=4.12 || ^>=4.13 || ^>=4.14 || ^>=4.15
  build-depends: containers <0.7

test-suite doctest
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: doctest.hs
  ghc-options: -Wall -threaded
  hs-source-dirs: test
  build-depends: base ^>=4.12 || ^>=4.13 || ^>=4.14 || ^>=4.15
  build-depends: either-list-functions
  build-depends: doctest
