cabal-version: 3.0

name:     either-list-functions
version:  0.0.4.5
category: Data
synopsis: Functions involving lists of Either

description: Functions involving lists of Either.

homepage:    https://github.com/typeclasses/either-list-functions
bug-reports: https://github.com/typeclasses/either-list-functions/issues

author:     Chris Martin <ch.martin@gmail.com>
maintainer: Chris Martin, Julie Moronuki

license: Apache-2.0
license-file: license.txt

build-type: Simple

extra-source-files:
    changelog.txt

source-repository head
    type: git
    location: https://github.com/typeclasses/either-list-functions

common base
    default-language: Haskell2010
    ghc-options: -Wall
    build-depends: base ^>=4.12 || ^>=4.13 || ^>=4.14 || ^>=4.15

library
    import: base
    hs-source-dirs: src
    exposed-modules: Data.List.EitherFunctions
    build-depends: containers <0.7

test-suite doctest
    import: base
    type: exitcode-stdio-1.0
    main-is: doctest.hs
    ghc-options: -threaded
    hs-source-dirs: test
    build-depends: either-list-functions
    build-depends: doctest
